--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>los campeones de cada categoria de ufc</h1>
+    <h1 class="titulo" campeones de cada categoria de ufc ></h1>
     
 </body>
 </html>
